--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div  class="head">
+        <div  class="head col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
             <img src="joyful-young-woman-raising-hands-sky_23-2148149933.jpg">
         </div>
     </header>
